--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -619,16 +619,16 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Selected Visual ID" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" Margin="5,5,0,0" FontSize="16"/>
+                    <Label Content="{DynamicResource VisualTabSelectedId}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" Margin="5,5,0,0" FontSize="16"/>
                     <Label Name="SelectedVisualPath" Grid.Row="0" Grid.Column="0" MinWidth="50" Margin="180,5,50,5" FontSize="16"/>
-                    <Label Content="The spell visual DBC files must be imported to see and edit these values.&#10;Any changes made must be exported to use them." Grid.Row="0" Grid.Column="2" Margin="0,5,0,0" FontSize="14"/>
-                    <Button Name="SaveVisualChangesBtn" Content="Save Visual Modifications" Grid.Row="0" Grid.Column="3" Margin="0,10,0,10" Click="SaveVisualChangesBtn_Click"/>
+                    <Label Content="{DynamicResource VisualTabInstructions}" Grid.Row="0" Grid.Column="2" Margin="0,5,0,0" FontSize="14"/>
+                    <Button Name="SaveVisualChangesBtn" Content="{DynamicResource VisualTabSaveChanges}" Grid.Row="0" Grid.Column="3" Margin="0,10,0,10" Click="SaveVisualChangesBtn_Click"/>
                     <!-- Spell Visual Lists -->
-                    <Label Content="Visual Kits (right click a row for operations)" Grid.Row="1" Grid.Column="0" Margin="5,0,5,5" HorizontalAlignment="Left"/>
+                    <Label Content="{DynamicResource VisualTabKitsHeader}" Grid.Row="1" Grid.Column="0" Margin="5,0,5,5" HorizontalAlignment="Left"/>
                     <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MaxHeight="250" MinWidth="350" Margin="10,30,10,10" BorderBrush="LightCyan" BorderThickness="2">
                         <Grid Name="VisualSettingsGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350"/>
                     </Border>
-                    <Label Content="Visual Kit Effects &amp; Attachments (right click a row for operations)" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Left"/>
+                    <Label Content="{DynamicResource VisualTabEffectsHeader}" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Left"/>
                     <Border Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MaxHeight="250" MinWidth="350" Margin="10,30,10,10" BorderBrush="LightCyan" BorderThickness="2">
                         <Grid Name="VisualEffectsListGrid" Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="350"/>
                     </Border>
@@ -653,31 +653,31 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <!-- Spell Visual Kit -->
-                        <Label Content="Start Animation Id" Grid.Row="0" Grid.Column="0" Margin="10,30,10,5"/>
+                        <Label Content="{DynamicResource VisualKitStartAnimId}" Grid.Row="0" Grid.Column="0" Margin="10,30,10,5"/>
                         <c:FilteredComboBox x:Name="StartAnimIdCombo" Grid.Row="0" Grid.Column="1" Margin="10,30,10,5" MinHeight="50" MinWidth="250"
                             IsEditable="True" 
                             IsTextSearchEnabled="True"
                             StaysOpenOnEdit="True"
                             c:OnlyValuesInList="True"/>
-                        <Label Content="Animation Id" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitAnimationId}" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
                         <c:FilteredComboBox x:Name="AnimationIdCombo" Grid.Row="1" Grid.Column="1" Margin="10,5,10,5" MinHeight="50" MinWidth="250"
                             IsEditable="True" 
                             IsTextSearchEnabled="True"
                             StaysOpenOnEdit="True"
                             c:OnlyValuesInList="True"/>
-                        <Label Content="Special Effect 1" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitSpecialEffects1}" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="SpecialEffect1Txt" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Special Effect 2" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitSpecialEffects2}" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="SpecialEffect2Txt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Special Effect 3" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitSpecialEffects3}" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="SpecialEffect3Txt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="World Effect" Grid.Row="0" Grid.Column="2" Margin="10,30,10,5"/>
+                        <Label Content="{DynamicResource VisualKitWorldEffect}" Grid.Row="0" Grid.Column="2" Margin="10,30,10,5"/>
                         <TextBox Name="WorldEffectTxt" Grid.Row="0" Grid.Column="3" Margin="10,30,10,5" MinWidth="150"/>
-                        <Label Content="Sound Id" Grid.Row="1" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitSoundId}" Grid.Row="1" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="SoundIdTxt" Grid.Row="1" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Shake Id" Grid.Row="2" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitShakeId}" Grid.Row="2" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="ShakeIdTxt" Grid.Row="2" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Flags" Grid.Row="3" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualKitFlags}" Grid.Row="3" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualFlagsTxt" Grid.Row="3" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
                     </Grid>
                     <Grid Name="VisualKitEffectEditorGrid" Grid.Row="3" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2" MinWidth="500" Margin="10,10,10,10">
@@ -698,34 +698,34 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <!-- EffectName -->
-                        <Label Content="Name" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualEffectName}" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="VisualEffectNameTxt" Grid.Row="1" Grid.Column="1" Margin="10,5,10,5" MinWidth="300"/>
-                        <Label Content="File Path" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualEffectFilePath}" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="VisualEffectFilePathTxt" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5" MinWidth="300"/>
-                        <Label Content="Area Efect Size" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualEffectAreaEffectSize}" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="VisualEffectAreaEffectSizeTxt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Scale" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualEffectScale}" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="VisualEffectScaleTxt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Minimum Allowed Scale" Grid.Row="5" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualEffectMinScale}" Grid.Row="5" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="VisualEffectMinAllowedScaleTxt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Maximum Allowed Scale" Grid.Row="6" Grid.Column="0" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualEffectMaxScale}" Grid.Row="6" Grid.Column="0" Margin="10,5,10,5"/>
                         <TextBox Name="VisualEffectMaxAllowedScaleTxt" Grid.Row="6" Grid.Column="1" Margin="10,5,10,5" MinWidth="150"/>
                         <!-- Attachments -->
-                        <Button Name="NewVisualAttachBtn" Content="Convert Effect to Attachment" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" 
+                        <Button Name="NewVisualAttachBtn" Content="{DynamicResource ConvertEffectToAttach}" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" 
                                 Margin="40,5,40,5" Click="NewVisualAttachBtn_Click" IsEnabled="False"/>
-                        <Label Content="Attachment Id" Grid.Row="1" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachAttachId}" Grid.Row="1" Grid.Column="2" Margin="10,5,10,5"/>
                         <ComboBox Name="VisualAttachmentIdCombo" Grid.Row="1" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Attachment Offset X" Grid.Row="2" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachOffsetX}" Grid.Row="2" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualAttachmentOffsetXTxt" Grid.Row="2" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Attachment Offset Y" Grid.Row="3" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachOffsetY}" Grid.Row="3" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualAttachmentOffsetYTxt" Grid.Row="3" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Attachment Offset Z" Grid.Row="4" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachOffsetZ}" Grid.Row="4" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualAttachmentOffsetZTxt" Grid.Row="4" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Attachment Offset Yaw" Grid.Row="5" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachOffsetYaw}" Grid.Row="5" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualAttachmentOffsetYawTxt" Grid.Row="5" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Attachment Offset Pitch" Grid.Row="6" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachOffsetPitch}" Grid.Row="6" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualAttachmentOffsetPitchTxt" Grid.Row="6" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
-                        <Label Content="Attachment Offset Roll" Grid.Row="7" Grid.Column="2" Margin="10,5,10,5"/>
+                        <Label Content="{DynamicResource VisualAttachOffsetRoll}" Grid.Row="7" Grid.Column="2" Margin="10,5,10,5"/>
                         <TextBox Name="VisualAttachmentOffsetRollTxt" Grid.Row="7" Grid.Column="3" Margin="10,5,10,5" MinWidth="150"/>
                     </Grid>
                 </Grid>
