--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -5,8 +5,9 @@
     <system:String x:Key="mainTitle">WoW Spell Editor</system:String>
     <system:String x:Key="tabSelectSpell">Select Spell</system:String>
     <system:String x:Key="labSpellsLoaded">No spells loaded.</system:String>
-    <system:String x:Key="labGoToSpell">Go to spell:</system:String>
+    <system:String x:Key="labGoToSpell">Go to spell id:</system:String>
     <system:String x:Key="labFilterBtName">Filter by name:</system:String>
+	<system:String x:Key="labFilterByEffect">Filter by spell effect:</system:String>
     <system:String x:Key="tabEnglish">English</system:String>
     <system:String x:Key="tabKorean">Korean</system:String>
     <system:String x:Key="tabFrench">French</system:String>
