--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -7,6 +7,7 @@
     <system:String x:Key="labSpellsLoaded">Aucun sort chargé.</system:String>
     <system:String x:Key="labGoToSpell">Aller au sort :</system:String>
     <system:String x:Key="labFilterBtName">Filtrer par nom :</system:String>
+	<system:String x:Key="labFilterByEffect">Filter by spell effect :</system:String>
     <system:String x:Key="tabEnglish">Anglais</system:String>
     <system:String x:Key="tabKorean">Coréen</system:String>
     <system:String x:Key="tabFrench">Français</system:String>
